<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/t_add_activity_layout"
    android:background="#7f8081"
    tools:context="com.example.sophia.cst2335_final_group_project.TrackingEditActivity">

    <TextView
        android:id="@+id/t_edit_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/t_edit_activity"
        android:textSize="25dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <fragment android:name="com.example.sophia.cst2335_final_group_project.TrackingEditFragment"
        android:id="@+id/t_edit_activity_fragment"
        android:layout_below="@id/t_edit_activity"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/t_button_update_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:background="#ffffff"
        android:text="@string/t_update" />

    <Button
        android:id="@+id/t_button_delete_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/t_button_update_activity"
        android:layout_marginStart="88dp"
        android:background="#f9fafd"
        android:text="@string/t_delete" />

    <Button
        android:id="@+id/t_buttone_cancel_edit_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/t_button_delete_activity"
        android:background="#fdfdff"
        android:text="@string/t_cancel" />


</RelativeLayout>

