<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/t_add_activity_layout"
    android:background="#939494"
    tools:context="com.example.sophia.cst2335_final_group_project.TrackingAddActivity">

    <TextView
        android:id="@+id/t_add_new_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="152dp"
        android:gravity="center_horizontal"
        android:text="@string/t_new_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25dp" />

    <fragment
        android:id="@+id/t_add_activity_fragment"
        android:name="com.example.sophia.cst2335_final_group_project.TrackingEditFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#feffff" />

    <Button
        android:id="@+id/t_new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/t_add_activity_fragment"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:text="@string/t_save" />

    <Button
        android:id="@+id/t_cancel_new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/t_add_activity_fragment"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="61dp"
        android:background="#ffffff"
        android:text="@string/t_cancel" />


</RelativeLayout>
